fixed stackoverflow from changing tabs in settings

--- a/src/app/common/settings/settings-about/settings-about.scss
+++ b/src/app/common/settings/settings-about/settings-about.scss
@@ -4,7 +4,7 @@ settings-about {
 	-webkit-box-flex: 1;
 	height: 100%;
 
-	h1 {
-		font-family: Roboto, "Helvetica Neue", sans-serif;
-	}
+	//h1 {
+	//	font-family: Roboto, "Helvetica Neue", sans-serif;
+	//}
 }
